Modified sway config files

--- a/.config/sway/config.d/30-exec-user.conf
+++ b/.config/sway/config.d/30-exec-user.conf
@@ -1,6 +1,8 @@
+exec_always ~/.local/bin/import_gsettings.sh
+exec dex -ae Sway
 exec waybar
-exec nm-applet
-exec blueman-applet
+# exec nm-applet
+# exec blueman-applet
 exec autotiling
 exec foot
 exec firefox
