--- a/.config/sway/config
+++ b/.config/sway/config
@@ -31,7 +31,7 @@ output eDP-1 resolution 1366x768 position 1366,0
 #
     exec swayidle -w \
              timeout 300 'swaylock -f -c 000000' \
-             timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+             timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
              before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
