--- a/.config/sway/config.d/10-decoration-user.conf
+++ b/.config/sway/config.d/10-decoration-user.conf
@@ -46,18 +46,18 @@ font pango:JetBrainsMono Nerd Font 10
 
 # Курсор
 seat seat0 xcursor_theme "Nordzy-cursors"
-exec_always gsettings set org.gnome.desktop.interface cursor-theme "Nordzy-cursors"
 
-# Курсоры, темы, иконки...
-set $gnome-schema org.gnome.desktop.interface
-exec_always {
-    	gsettings set $gnome-schema gtk-theme 'Nordic'
-    	gsettings set $gnome-schema icon-theme 'Papirus-Dark'
-    	gsettings set $gnome-schema cursor-theme 'Norzy-cursors'
-    	gsettings set $gnome-schema font-name 'Ubuntu Nerd Font Condensed 10'
-		# Отключение кнопок управления окном
-	gsettings set org.gnome.desktop.wm.preferences button-layout ''
-}
+# # Курсоры, темы, иконки...
+# exec_always gsettings set org.gnome.desktop.interface cursor-theme "Nordzy-cursors"
+# set $gnome-schema org.gnome.desktop.interface
+# exec_always {
+#     	gsettings set $gnome-schema gtk-theme 'Nordic'
+#     	gsettings set $gnome-schema icon-theme 'Papirus-Dark'
+#     	gsettings set $gnome-schema cursor-theme 'Norzy-cursors'
+#     	gsettings set $gnome-schema font-name 'Ubuntu Nerd Font Condensed 10'
+# 		# Отключение кнопок управления окном
+# 	gsettings set org.gnome.desktop.wm.preferences button-layout ''
+# }
 
 # Цвета рамок
 # client.focused			#ebdbb2 #ebdbb2 #ebdbb2 #ebdbb2
