--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,6 +12,9 @@ set $term foot
 # Your preferred application launcher
 # set $menu wmenu-run -i -nb '#1f222d' -nf '#81a1c1' -sb '#81a1c1' -sf '#1f222d' -fn 'JetBrainsMono Nerd Font:bold:pixelsize=9'
 set $menu wmenu-run 
+set $browser firefox
+set $runner wofi --show drun
+set $fmanager thunar
 
 ### Output configuration
 #
@@ -86,7 +89,11 @@ output eDP-1 resolution 1366x768 position 1366,0
     bindsym $mod+Shift+q kill
 
     # Start your launcher
-    bindsym $mod+d exec $menu
+    bindsym $mod+Shift+d exec $menu
+    bindsym $mod+d exec $runner
+    bindsym $mod+b exec $browser
+    bindsym $mod+n exec $fmanager
+
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -156,9 +163,9 @@ output eDP-1 resolution 1366x768 position 1366,0
 # Layout stuff:
 #
     # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
+    # $mod+c or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
+    bindsym $mod+c splith
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
