--- a/.config/sway/config.d/20-windows-user.conf
+++ b/.config/sway/config.d/20-windows-user.conf
@@ -13,20 +13,19 @@ for_window [app_id="org.inkscape.Inkscape"] focus
 for_window [app_id="reaper"] focus
 
 # Запуск в плавающем режиме
-for_window [app_id="galculator"] floating enable
 for_window [window_type="dialog"] floating enable
-# for_window [app_id="firefox"] floating enable, border none, resize set 1280px 720px, move position center
+for_window [window_role="dialog"] floating enable
+for_window [app_id="galculator"] floating enable
+for_window [app_id="firefox"] floating enable, move position center
 for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 850, move left 410px, move up 0px
 # for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
 # for_window [title="cava"] floating enable, resize set 700px 200px, move right 210px, move down 205px
-
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 370px, move up 170px
 for_window [app_id="nm-connection-editor"] floating enable, border none, resize set 600px 400px, move right 370px, move up 170px
-
 for_window [app_id="mpv"] floating enable, border none, move position center
-for_window [app_id="thunar"] floating enable
 for_window [app_id="org.gnome.FileRoller"] floating enable, border none, move position center
 for_window [app_id="swayimg"] floating enable, border none, resize set 800px 500px, move position center
+for_window [app_id="thunar"] floating enable
 
 # Сатурация
 for_window [app_id="foot"] saturation 2.0
