--- a/.config/sway/config.d/30-exec-user.conf
+++ b/.config/sway/config.d/30-exec-user.conf
@@ -1,8 +1,13 @@
+exec_always /usr/lib/xdg-desktop-portal -r & /usr/lib/xdg-desktop-portal-wlr -r
 exec_always ~/.local/bin/import_gsettings.sh
 exec dex -ae Sway
-exec waybar
+# exec waybar
 # exec nm-applet
 # exec blueman-applet
 exec autotiling
 exec foot
+# exec {
+#   swaymsg 'workspace 1; exec foot'
+#   swaymsg 'workspace 2; exec firefox'
+# }
 # exec XDG_CURRENT_DESKTOP=gnome telegram-desktop
