Modified foot, sway, waybar config files

--- a/.config/sway/config.d/10-decoration-user.conf
+++ b/.config/sway/config.d/10-decoration-user.conf
@@ -11,13 +11,13 @@ blur_passes 5
 blur_radius 5
 
 #Тени
-# shadows on
-# shadows_on_csd on
-# shadow_blur_radius 5
-# shadow_color #0000007F
+shadows on
+shadows_on_csd on
+shadow_blur_radius 5
+shadow_color #0000007F
 
 # Затемнение неактивных окон
-default_dim_inactive 0.0
+default_dim_inactive 0.5
 dim_inactive_colors.unfocused #000000FF
 dim_inactive_colors.urgent #900000FF
 
@@ -28,11 +28,11 @@ smart_gaps off
 
 # Толщина рамок для обычных и плавающих окон
 default_border pixel 2
-default_floating_border none 
+default_floating_border pixel 2 
 
 # Размер рамок окон
 for_window [tiling] border pixel 2
-for_window [floating] border none
+for_window [floating] border pixel 2
 
 # Отключение рамки если открыто одно окно
 smart_borders off
