--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -102,11 +102,11 @@ launch=xdg-open ${url}
 # long-press-delay=400
 
 [colors]
-# alpha=1.0
+alpha=0.4
 # background=242424
 # foreground=ffffff
-# flash=7f7f00
-# flash-alpha=0.5
+flash=7f7f00
+flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
 # regular0=242424  # black
