--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,10 +32,10 @@ output eDP-1 resolution 1366x768 position 1366,0
 #
 # Example configuration:
 #
-    exec swayidle -w \
-             timeout 300 'swaylock -f -c 000000' \
-             timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-             before-sleep 'swaylock -f -c 000000'
+#    exec swayidle -w \
+#             timeout 300 'swaylock -f -c 000000' \
+#             timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+#             before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
