--- a/.config/sway/config.d/20-windows-user.conf
+++ b/.config/sway/config.d/20-windows-user.conf
@@ -16,6 +16,7 @@ for_window [app_id="reaper"] focus
 for_window [window_type="dialog"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [app_id="galculator"] floating enable
+for_window [app_id="blueman-manager"] floating enable, move position center
 for_window [app_id="firefox"] floating enable, move position center
 for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 850, move left 410px, move up 0px
 # for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
@@ -25,7 +26,6 @@ for_window [app_id="nm-connection-editor"] floating enable, border none, resize 
 for_window [app_id="mpv"] floating enable, border none, move position center
 for_window [app_id="org.gnome.FileRoller"] floating enable, border none, move position center
 for_window [app_id="swayimg"] floating enable, border none, resize set 800px 500px, move position center
-for_window [app_id="thunar"] floating enable
-
+for_window [app_id="thunar"] floating enable, move position center
 # Сатурация
 for_window [app_id="foot"] saturation 2.0
