Modified sway windows config files

--- a/.config/sway/config.d/20-windows-user.conf
+++ b/.config/sway/config.d/20-windows-user.conf
@@ -23,8 +23,8 @@ for_window [app_id="firefox"] floating enable, move position center
 for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 850, move left 410px, move up 0px
 # for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
 # for_window [title="cava"] floating enable, resize set 700px 200px, move right 210px, move down 205px
-for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 650px, move up 300px
-for_window [app_id="nm-connection-editor"] floating enable, border none, resize set 600px 400px, move right 650px, move up 300px
+for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
+for_window [app_id="nm-connection-editor"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
 for_window [app_id="mpv"] floating enable, border none, move position center
 for_window [app_id="org.gnome.FileRoller"] floating enable, border none, move position center
 for_window [app_id="swayimg"] floating enable, border none, resize set 800px 500px, move position center
@@ -44,4 +44,4 @@ for_window [title="File Operation Progress"] floating enable, border pixel 1, st
 # Сатурация
 for_window [app_id="foot"] saturation 2.0
 # Mark xwayland apps with an [X]:
-for_window [shell="xwayland"] title_format "<span>[X] %title゜</span>"
+for_window [shell="xwayland"] title_format "<span>[X] %title</span>"
