--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -106,8 +106,8 @@ launch=xdg-open ${url}
 alpha=0.4
 # background=242424
 # foreground=ffffff
-flash=7f7f00
-flash-alpha=0.5
+# flash=7f7f00
+# flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
 # regular0=242424  # black
