--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,7 +12,7 @@ set $term foot
 # Your preferred application launcher
 # set $menu wmenu-run -i -nb '#1f222d' -nf '#81a1c1' -sb '#81a1c1' -sf '#1f222d' -fn 'JetBrainsMono Nerd Font:bold:pixelsize=9'
 set $menu wmenu-run 
-set $browser firefox
+set $browser luakit
 set $runner wofi --show drun
 set $fmanager thunar
 
@@ -247,11 +247,11 @@ bar {
     # status_command i3status
     swaybar_command waybar
 
-    # colors {
-    #     statusline #ffffff
-    #     background #323232
-    #     inactive_workspace #32323200 #32323200 #5c5c5c
-    # }
+    colors {
+        statusline #ffffff
+        background #282828E6
+        inactive_workspace #282936BF #282936BF #5c5c5c
+    }
 }
 
 include /home/bma/.config/sway/config.d/*
