--- a/.config/sway/config.d/20-windows-user.conf
+++ b/.config/sway/config.d/20-windows-user.conf
@@ -1,6 +1,7 @@
 # Запуск на определенном воркспейсе
 assign [app_id="foot"] workspace 1
 assign [app_id="firefox"] workspace 2
+assign [app_id="luakit"] workspace 2
 assign [app_id="thunar"] workspace 3
 assign [app_id="org.inkscape.Inkscape"] workspace 5
 assign [app_id="org.telegram.desktop"] workspace 4
@@ -14,13 +15,16 @@ for_window [app_id="org.inkscape.Inkscape"] focus
 for_window [app_id="reaper"] focus
 for_window [app_id="rhythmbox"] focus
 for_window [app_id="firefox"] focus
+for_window [app_id="luakit"] focus
+for_window [app_id="org.telegram.desktop"] focus 
 
 
 # Запуск в плавающем режиме
 for_window [app_id="thunar"] floating enable
 for_window [app_id="galculator"] floating enable
 for_window [app_id="firefox"] floating enable, move position center
-for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 850, move left 410px, move up 0px
+for_window [app_id="luakit"] floating enable, move position center
+for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 720, move left 480px, move down 10px
 # for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
 # for_window [title="cava"] floating enable, resize set 700px 200px, move right 210px, move down 205px
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
