--- a/.config/sway/config.d/10-decoration-user.conf
+++ b/.config/sway/config.d/10-decoration-user.conf
@@ -39,7 +39,7 @@ smart_borders off
 
 #--- УКРАШАТЕЛЬСТВА -------------------------------------------------------------------
 # Обои
-output * bg "$(find ~/Pictures/wallpapers/|shuf -n1)" fill
+output * bg "$(find ~/Pictures/Wallpapers/|shuf -n1)" fill
 
 # Шрифт (по ходу для заголовков)
 font pango:JetBrainsMono Nerd Font 10
