--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1262,14 +1262,14 @@ font_size 11.0
 
 #: Color scheme {{{
 
-include ./nord.conf
+include current-theme.conf 
 
 # foreground #dddddd
 # background #000000
 
 #: The foreground and background colors.
 
-background_opacity 0.5
+background_opacity 0.92
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
