--- a/.config/sway/config.d/30-exec-user.conf
+++ b/.config/sway/config.d/30-exec-user.conf
@@ -5,9 +5,9 @@ exec dex -ae Sway
 # exec nm-applet
 # exec blueman-applet
 exec autotiling
-exec foot
-# exec {
-#   swaymsg 'workspace 1; exec foot'
-#   swaymsg 'workspace 2; exec firefox'
-# }
+# exec foot
+exec {
+  swaymsg 'workspace 1; exec foot'
+  swaymsg 'workspace 2; exec firefox'
+}
 # exec XDG_CURRENT_DESKTOP=gnome telegram-desktop
