--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -2,7 +2,7 @@
 
 include = /usr/share/foot/themes/nord
 
-shell=/usr/bin/fish
+# shell=/usr/bin/fish
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
 # login-shell=no
