--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -136,7 +136,7 @@
       },
       "format": "{icon} {capacity}%",
       "format-full": "{capacity}% {icon}",
-      "format-charging": "{capacity}% ",
+      "format-charging": "{capacity}% 󰂄",
       "format-plugged": "{capacity}% ",
       "format-alt": "{time} {icon}",
       // "format-good": "", // An empty format will hide the module
