изменено:      .config/sway/config 	удалено:       .config/sway/config.d/10-decoration-user.conf 	удалено:       .config/sway/config.d/20-windows-user.conf 	удалено:       .config/sway/config.d/30-exec-user.conf

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -27,6 +27,10 @@ set $fmanager thunar
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output eDP-1 resolution 1366x768 position 1366,0
+output eDP-1 allow_tearing yes
+output * max_render_time off
+# Обои
+output * bg "$(find ~/Pictures/Wallpapers/|shuf -n1)" fill
 
 ### Idle configuration
 #
@@ -225,13 +229,26 @@ bindsym $mod+r mode "resize"
 # Utilities:
 #
     # Special keys to adjust volume via PulseAudio
-    bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
-    bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
-    bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
+    bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    # bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
+    bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+    # bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
+    # bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
     # Special keys to adjust brightness via brightnessctl
-    bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
+    # bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
+    # bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+    bindsym XF86AudioPlay exec playerctl play-pause
+    bindsym XF86AudioPause exec playerctl play-pause
+    bindsym XF86AudioNext exec playerctl next
+    bindsym XF86AudioPrev exec playerctl previous
+    bindsym XF86AudioStop exec playerctl stop
+    bindsym XF86Search exec dmenu-run
+
     # Special key to take a screenshot with grim
     bindsym Print exec grim
 
@@ -249,10 +266,151 @@ bar {
     swaybar_command waybar
 
     colors {
-        statusline #ffffff
-        background #282828E6
-        inactive_workspace #282936BF #282936BF #5c5c5c
+    #     statusline #ffffff
+    #     background #282828E6
+    #     inactive_workspace #282936BF #282936BF #5c5c5c
+    #     focused_workspace #83a598 #458588 #eddbb2
     }
 }
+
+#--- ДЕКОРАЦИИ ОКОН -------------------------------------------------------------------
+
+# Скругления
+corner_radius 10
+smart_corner_radius enable
+
+# Блюр
+blur on
+blur_xray on
+blur_passes 5
+blur_radius 5
+
+# Тени
+shadows on
+shadows_on_csd on
+shadow_blur_radius 5
+shadow_color #0000007F
+
+# Затемнение неактивных окон
+default_dim_inactive 0.5
+dim_inactive_colors.unfocused #000000FF
+dim_inactive_colors.urgent #900000FF
+
+# Гапсы
+gaps inner 5 
+gaps outer 5
+smart_gaps off
+
+# Толщина рамок для обычных и плавающих окон
+default_border pixel
+default_floating_border pixel
+
+# Размер рамок окон
+for_window [tiling] border pixel
+for_window [floating] border pixel
+
+# Отключение рамки если открыто одно окно
+smart_borders off
+
+#--- УКРАШАТЕЛЬСТВА -------------------------------------------------------------------
+
+# Шрифт (походу для заголовков)
+font pango:JetBrainsMono Nerd Font 10
+
+# Курсор
+seat seat0 xcursor_theme "Nordzy-cursors"
+
+# # Курсоры, темы, иконки...
+# exec_always gsettings set org.gnome.desktop.interface cursor-theme "Nordzy-cursors"
+# set $gnome-schema org.gnome.desktop.interface
+# exec_always {
+#     	gsettings set $gnome-schema gtk-theme 'Nordic'
+#     	gsettings set $gnome-schema icon-theme 'Papirus-Dark'
+#     	gsettings set $gnome-schema cursor-theme 'Norzy-cursors'
+#     	gsettings set $gnome-schema font-name 'Ubuntu Nerd Font Condensed 10'
+# 		# Отключение кнопок управления окном
+# 	gsettings set org.gnome.desktop.wm.preferences button-layout ''
+# }
+
+# Цвета рамок
+# client.focused			#ebdbb2 #ebdbb2 #ebdbb2 #ebdbb2
+# client.focused_inactive		#282828 #282828 #282828 #282828
+# client.unfocused		#282828 #282828 #282828 #282828
+# client.urgent			#282828 #282828 #282828 #282828
+# client.placeholder		#282828 #282828 #282828 #282828
+#
+# Запуск на определенном воркспейсе
+assign [app_id="foot"] workspace 1
+assign [app_id="firefox"] workspace 2
+assign [app_id="luakit"] workspace 2
+assign [class="Yandex-browser"] workspace 2
+assign [app_id="thunar"] workspace 3
+assign [app_id="org.inkscape.Inkscape"] workspace 5
+assign [app_id="org.telegram.desktop"] workspace 4
+assign [app_id="portproton"] workspace 6
+assign [app_id="rhythmbox"] 5
+assign [app_id="mpv"] 5
+# assign [title="cmus"] workspace 5
+# assign [title="cava"] workspace 5
+
+# Запуск в фокусе
+for_window [app_id="org.inkscape.Inkscape"] focus
+for_window [app_id="reaper"] focus
+for_window [app_id="rhythmbox"] focus
+for_window [app_id="mpv"] focus
+for_window [app_id="firefox"] focus
+for_window [app_id="luakit"] focus
+for_window [class="Yandex-browser"] focus
+for_window [app_id="org.telegram.desktop"] focus 
+for_window [app_id="blueman-manager"] focus
+
+# Запуск в плавающем режиме
+for_window [app_id="thunar"] floating enable
+for_window [app_id="galculator"] floating enable
+for_window [app_id="firefox"] floating enable, border none, move position center
+for_window [app_id="luakit"] floating enable, move position center
+for_window [class="yandex-browser"] floating enable, border none, resize set 1280 720, move position center
+for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 720, move left 480px, move down 10px
+# for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
+# for_window [title="cava"] floating enable, resize set 700px 200px, move right 210px, move down 205px
+for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
+for_window [app_id="blueman-manager"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
+for_window [app_id="blueman-services"] floating enable, border none, move position center
+# for_window [app_id="nm-connection-editor"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
+for_window [app_id="nm-connection-editor"] floating enable, border none, move position center
+for_window [app_id="mpv"] floating enable, border none, move position center
+for_window [app_id="org.gnome.FileRoller"] floating enable, border none, move position center
+for_window [app_id="swayimg"] floating enable, border none, resize set 800px 500px, move position center
+for_window [app_id="virt-manager"] floating enable, border normal
+for_window [shell="xwayland"] floating enable, border none, move position center
+
+# set floating for window roles
+for_window [window_type="dialog"] floating enable
+for_window [window_role="dialog"] floating enable
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="bubble"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [window_role="Preferences"] floating enable
+for_window [window_type="menu"] floating enable
+for_window [window_role="About"] floating enable
+for_window [title="File Operation Progress"] floating enable, border pixel 1, sticky enable, resize set width 40 ppt height 30 ppt
+
+# Сатурация
+for_window [app_id="foot"] saturation 2.0
+# Mark xwayland apps with an [X]:
+for_window [shell="xwayland"] title_format "<span>[X] %title</span>"
+
+# Запуск программ при старте SWAY
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec_always /usr/lib/xdg-desktop-portal -r & /usr/lib/xdg-desktop-portal-wlr -r
+exec_always ~/.local/bin/import_gsettings.sh
+exec wl-paste -t text --watch clipman store --no-persist
+exec dex -ae Sway
+exec autotiling
+exec {
+  swaymsg 'workspace 1; exec foot'
+  swaymsg 'workspace 2; exec yandex-browser-stable'
+}
+# exec XDG_CURRENT_DESKTOP=gnome telegram-desktop
 
 include /home/bma/.config/sway/config.d/*
