--- a/.config/sway/config
+++ b/.config/sway/config
@@ -27,8 +27,8 @@ set $fmanager thunar
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output eDP-1 resolution 1366x768 position 1366,0
-output eDP-1 allow_tearing yes
-output * max_render_time off
+# output eDP-1 allow_tearing yes
+# output * max_render_time off
 # Обои
 output * bg "$(find ~/Pictures/Wallpapers/|shuf -n1)" fill
 
@@ -369,8 +369,8 @@ for_window [app_id="thunar"] floating enable
 for_window [app_id="galculator"] floating enable
 for_window [app_id="firefox"] floating enable, border none, move position center
 for_window [app_id="luakit"] floating enable, move position center
-for_window [class="yandex-browser"] floating enable, border none, resize set 1280 720, move position center
-for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 720, move left 480px, move down 10px
+for_window [class="yandex-browser"] floating enable, border none, resize set 1280 680, move position center
+for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 680, move left 480px, move down 10px
 # for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
 # for_window [title="cava"] floating enable, resize set 700px 200px, move right 210px, move down 205px
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
