изменено:      .bash_profile 	изменено:      .config/foot/foot.ini 	новый файл:    .config/i3/config 	новый файл:    .config/i3status/config 	изменено:      .config/picom/picom.conf 	новый файл:    .xxkbrc

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@ include = /usr/share/foot/themes/nord
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
 # title=foot
-# locked-title=no
+locked-title=no
 
 font=JetBrainsMono Nerd Font:size=11
 # font=monospace:size=8
@@ -57,10 +57,10 @@ font=JetBrainsMono Nerd Font:size=11
 # command-focused=no
 
 [desktop-notifications]
-# command=notify-send --wait --app-name ${app-id} --icon ${app-id} --category ${category} --urgency ${urgency} --expire-time ${expire-time} --hint STRING:image-path:${icon} --hint BOOLEAN:suppress-sound:${muted} --hint STRING:sound-name:${sound-name} --replace-id ${replace-id} ${action-argument} --print-id -- ${title} ${body}
-# command-action-argument=--action ${action-name}=${action-label}
-# close=""
-# inhibit-when-focused=yes
+command=notify-send --wait --app-name ${app-id} --icon ${app-id} --category ${category} --urgency ${urgency} --expire-time ${expire-time} --hint STRING:image-path:${icon} --hint BOOLEAN:suppress-sound:${muted} --hint STRING:sound-name:${sound-name} --replace-id ${replace-id} ${action-argument} --print-id -- ${title} ${body}
+command-action-argument=--action ${action-name}=${action-label}
+close=""
+inhibit-when-focused=yes
 
 
 [scrollback]
@@ -103,7 +103,7 @@ launch=xdg-open ${url}
 # long-press-delay=400
 
 [colors]
-alpha=0.6
+alpha=0.2
 # background=242424
 # foreground=ffffff
 # flash=7f7f00
