--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -153,7 +153,7 @@ fade-delta = 10
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
+inactive-opacity = 0.8
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -163,7 +163,7 @@ fade-delta = 10
 inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -443,16 +443,7 @@ wintypes:
 };
 
 opacity-rule = [
-  "100:class_g = 'St' && focused",
-  "50:class_g = 'St' && !focused",
-  "95:class_g = 'Nemo' && focused",
-  "70:class_g = 'Nemo' && !focused",
-  "70:class_g = 'Nemo' && argb",
-  "95:class_g = 'Code' && focused",
-  "70:class_g = 'Code' && !focused",
-  "95:class_g = 'Gimp' && focused",
-  "70:class_g = 'Gimp' && !focused",
-  "95:class_g = 'Alacritty' && focused",
-  "50:class_g = 'Alacritty' && !focused",
+  "100:class_g = 'kitty' && focused",
+  "50:class_g = 'kitty' && !focused",
   "100:fullscreen",
 ];
