изменено:      .config/i3/config 	изменено:      .config/sway/config 	изменено:      .local/bin/arch_setup.sh 	изменено:      .local/bin/dmenuctl 	изменено:      .local/bin/import_gsettings.sh 	изменено:      .local/bin/power.sh 	изменено:      .local/bin/weather.sh

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -108,7 +108,7 @@ bindsym $alt+a exec --no-startup-id $HOME/.local/bin/dmenuctl audio
 bindsym $alt+n exec --no-startup-id $HOME/.local/bin/dmenuctl notes
 
 # start web-browser
-bindsym $mod+b exec --no-startup-id pidof zen || zen
+bindsym $mod+b exec --no-startup-id pidof luakit || luakit
 
 # start file manager
 bindsym $mod+n exec --no-startup-id pidof thunar || thunar
