--- a/.config/sway/config
+++ b/.config/sway/config
@@ -360,6 +360,7 @@ seat seat0 xcursor_theme "Nordzy-cursors"
 # Запуск на определенном воркспейсе
 assign [app_id="foot"] workspace 1
 assign [app_id="(?i)zen*"] workspace 2
+assign [app_id="hiddify"] workspace 2
 assign [app_id="luakit"] workspace 2
 assign [class="Yandex-browser"] workspace 2
 assign [app_id="thunar"] workspace 3
@@ -377,6 +378,7 @@ for_window [app_id="reaper"] focus
 for_window [app_id="rhythmbox"] focus
 for_window [app_id="mpv"] focus
 for_window [app_id="(?i)zen*"] focus
+for_window [app_id="hiddify"] focus
 for_window [app_id="luakit"] focus
 for_window [class="Yandex-browser"] focus
 for_window [app_id="org.telegram.desktop"] focus 
@@ -389,6 +391,7 @@ for_window [app_id="zen"] floating enable, border none, move position center
 for_window [app_id="luakit"] floating enable, move position center
 for_window [class="yandex-browser"] floating enable, border none, resize set 1280 680, move position center
 for_window [app_id="org.telegram.desktop"] floating enable, border none, resize set 400 680, move left 480px, move down 10px
+for_window [app_id="hiddify"] floating enable, border none, move position center
 # for_window [title="cmus"] floating enable, resize set 700px 400px, move right 210px, move up 115px
 # for_window [title="cava"] floating enable, resize set 700px 200px, move right 210px, move down 205px
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none, resize set 600px 400px, move right 380px, move up 170px
