изменено:      .config/sway/config 	переименовано: .local/background/wallpapers/wallpaper(0).jpg -> .local/backgrounds/wallpapers/wallpaper(0).jpg 	переименовано: .local/background/wallpapers/wallpaper(1).jpg -> .local/backgrounds/wallpapers/wallpaper(1).jpg 	переименовано: .local/background/wallpapers/wallpaper(10).jpg -> .local/backgrounds/wallpapers/wallpaper(10).jpg 	переименовано: .local/background/wallpapers/wallpaper(11).jpg -> .local/backgrounds/wallpapers/wallpaper(11).jpg 	переименовано: .local/background/wallpapers/wallpaper(12).jpg -> .local/backgrounds/wallpapers/wallpaper(12).jpg 	переименовано: .local/background/wallpapers/wallpaper(13).jpg -> .local/backgrounds/wallpapers/wallpaper(13).jpg 	переименовано: .local/background/wallpapers/wallpaper(14).jpg -> .local/backgrounds/wallpapers/wallpaper(14).jpg 	переименовано: .local/background/wallpapers/wallpaper(2).jpg -> .local/backgrounds/wallpapers/wallpaper(2).jpg 	переименовано: .local/background/wallpapers/wallpaper(3).jpg -> .local/backgrounds/wallpapers/wallpaper(3).jpg 	переименовано: .local/background/wallpapers/wallpaper(4).jpg -> .local/backgrounds/wallpapers/wallpaper(4).jpg 	переименовано: .local/background/wallpapers/wallpaper(5).jpg -> .local/backgrounds/wallpapers/wallpaper(5).jpg 	переименовано: .local/background/wallpapers/wallpaper(6).jpg -> .local/backgrounds/wallpapers/wallpaper(6).jpg 	переименовано: .local/background/wallpapers/wallpaper(7).jpg -> .local/backgrounds/wallpapers/wallpaper(7).jpg 	переименовано: .local/background/wallpapers/wallpaper(8).jpg -> .local/backgrounds/wallpapers/wallpaper(8).jpg 	переименовано: .local/background/wallpapers/wallpaper(9).jpg -> .local/backgrounds/wallpapers/wallpaper(9).jpg 	новый файл:    .local/backgrounds/wm-lock.png 	изменено:      .local/bin/dmenuctl

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,7 +15,7 @@ set $term foot
 # Your preferred application launcher
 set $menu dmenu_run -i -nb '#1f222d' -nf '#81a1c1' -sb '#81a1c1' -sf '#1f222d' -fn 'JetBrainsMono Nerd Font:bold:pixelsize=18'
 # set $menu wmenu-run 
-set $browser yandex-browser
+set $browser yandex-browser-stable
 set $runner rofi -show drun
 set $fmanager thunar
 
@@ -35,7 +35,7 @@ output eDP-1 resolution 1366x768 position 1366,0
 # output eDP-1 allow_tearing yes
 # output * max_render_time off
 # Обои
-output * bg "$(find $HOME/.local/background/wallpapers/|shuf -n1)" fill
+output * bg "$(find $HOME/.local/backgrounds/wallpapers/|shuf -n1)" fill
 
 ########################################
 ### Idle configuration
