--- a/.config/sway/config
+++ b/.config/sway/config
@@ -430,7 +430,7 @@ for_window [shell="xwayland"] title_format "<span>[X] %title</span>"
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always /usr/lib/xdg-desktop-portal -r & /usr/lib/xdg-desktop-portal-wlr -r
 exec_always ~/.local/bin/import_gsettings.sh
-exec wl-paste -t text --watch clipman store --no-persist
+exec wl-paste -t text --watch cliphist store
 exec dex -ae Sway
 exec autotiling
 exec {
