изменено:      .bash_profile 	новый файл:    .config/cava/config 	новый файл:    .config/cava/shaders/bar_spectrum.frag 	новый файл:    .config/cava/shaders/northern_lights.frag 	новый файл:    .config/cava/shaders/pass_through.vert 	новый файл:    .config/cava/shaders/spectrogram.frag 	новый файл:    .config/cava/shaders/winamp_line_style_spectrum.frag 	новый файл:    .config/glava/bars 	новый файл:    .config/glava/bars.glsl 	новый файл:    .config/glava/circle 	новый файл:    .config/glava/circle.glsl 	новый файл:    .config/glava/env_KWin.glsl 	новый файл:    .config/glava/env_Openbox.glsl 	новый файл:    .config/glava/env_Xfwm4.glsl 	новый файл:    .config/glava/env_awesome.glsl 	новый файл:    .config/glava/env_default.glsl 	новый файл:    .config/glava/env_i3.glsl 	новый файл:    .config/glava/graph 	новый файл:    .config/glava/graph.glsl 	новый файл:    .config/glava/radial 	новый файл:    .config/glava/radial.glsl 	новый файл:    .config/glava/rc.glsl 	новый файл:    .config/glava/smooth_parameters.glsl 	новый файл:    .config/glava/util 	новый файл:    .config/glava/wave 	новый файл:    .config/glava/wave.glsl 	новый файл:    .config/helix/config.toml 	новый файл:    .config/mpv/encoding.rst 	новый файл:    .config/mpv/input.conf 	новый файл:    .config/mpv/mplayer-input.conf 	новый файл:    .config/mpv/mpv.conf 	новый файл:    .config/mpv/restore-old-bindings.conf 	новый файл:    .config/mpv/restore-osc-bindings.conf 	новый файл:    .config/mpv/tech-overview.txt 	изменено:      .config/sway/config 	новый файл:    .config/zellij/config.kdl 	новый файл:    .config/zellij/config.kdl.bak 	новый файл:    .tmux.conf 	новый файл:    Templates/BLANK_README.md 	новый файл:    Templates/template.c 	новый файл:    Templates/template.h 	новый файл:    Templates/template.java 	новый файл:    Templates/template.md 	новый файл:    Templates/template.py 	новый файл:    Templates/template.sh

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -325,7 +325,7 @@ default_floating_border pixel
 
 # Размер рамок окон
 for_window [tiling] border pixel
-for_window [floating] border pixel
+# for_window [floating] border pixel
 
 # Отключение рамки если открыто одно окно
 smart_borders on
@@ -361,7 +361,7 @@ seat seat0 xcursor_theme "Nordzy-cursors"
 #
 # Запуск на определенном воркспейсе
 assign [app_id="foot"] workspace 1
-assign [app_id="(?i)zen*"] workspace 2
+assign [app_id="zen"] workspace 2
 assign [app_id="hiddify"] workspace 2
 assign [app_id="luakit"] workspace 2
 assign [app_id="(?i)yandex*"] workspace 2
@@ -379,7 +379,7 @@ for_window [app_id="org.inkscape.Inkscape"] focus
 for_window [app_id="reaper"] focus
 for_window [app_id="rhythmbox"] focus
 for_window [app_id="mpv"] focus
-for_window [app_id="(?i)zen*"] focus
+for_window [app_id="zen"] focus
 for_window [app_id="hiddify"] focus
 for_window [app_id="luakit"] focus
 for_window [app_id="(?i)yandex*"] focus
