изменено:      .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,7 +75,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'omerxx/tmux-floax'
 # set -g @floax-width '80%'
 # set -g @floax-height '80%'
@@ -84,5 +84,5 @@ set -g @plugin 'catppuccin/tmux'
 # set -g @floax-text-color 'blue'
 # set -g @floax-bind 'p'
 # set -g @floax-change-path 'false'
-# set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin "arcticicestudio/nord-tmux"
 run '~/.tmux/plugins/tpm/tpm'
