--- a/.config/i3/config
+++ b/.config/i3/config
@@ -26,7 +26,7 @@ gaps outer 4
 
 # HIDE EDGE BORDERS
 # hide_edge_borders none|vertical|horizontal|both|smart|smart_no_gaps
-hide_edge_borders smart_no_gaps
+hide_edge_borders smart
 
 # Automatic back-and-forth when switching to the current workspace
 workspace_auto_back_and_forth yes
